# sakura-launcher

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build-windows.yml  build.yml
sakura-launcher/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: achievements.rs  catalog.rs  catalog_manager.rs  downloader.rs  friends.rs  games.rs  launcher.rs  metadata.rs  mod.rs  playtime.rs  s3.rs  scanner.rs  settings.rs  webdav.rs
src-tauri/src/models/: achievement.rs  catalog.rs  friend.rs  game.rs  mod.rs
src/components/: AchievementCard.tsx  DownloadProgress.tsx  FriendCard.tsx  GameCard.tsx  PetalAnimation.tsx  ResizeHandles.tsx  SearchBar.tsx  Sidebar.tsx  TitleBar.tsx
src/hooks/: useDownloader.ts  useGames.ts  usePlaytime.ts  useTranslation.ts
src/pages/: Achievements.tsx  AddGame.tsx  Admin.tsx  Browse.tsx  Friends.tsx  GameDetail.tsx  Library.tsx  Settings.tsx
src/store/: useGameStore.ts
src/styles/: globals.css
