[package]
name = "sakura-launcher"
version = "0.1.0"
description = "Sakura Launcher — a beautiful game launcher powered by BunnyCDN"
authors = ["Ari"]
edition = "2021"

[lib]
name = "sakura_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sakura-launcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
zip = "2"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
